**Changelog**

[PLANNED WORKS]


[V1.2.0]
- [NEW] Extended fanart support for video info and seasons (active by default)
- [NEW] User option: disable extended fanart
- [NEW] Keyboard autocomplete support

[V1.1.1]
- [FIXED] Aspect ratio incorrect in poster view (thanks wiiija)
- [NEW] Artist slideshow support
- [NEW] Polish translation (thanks Etharr)
- [FIXED] Context menu onback handling in addons (thanks Solbero)
- [FIXED] onback from music visualisation screen
- [NEW] Video Playlists now display in correct content view with title
- [NEW] Music video support
- [NEW] Artwork downloader support
- [NEW] German translation (thanks Matthias)
- Various minor tweaks

[V1.1.0]
- Various tweaks and GUI updates.
- [NEW] Additional user options for menu customisation added to skin settings
- [NEW] Fullscreen music / video OSD revised.
- [NEW] Added buttons to 'go to artist' and 'go to album' in the fullscreen music options
- [NEW] Party mode added as a default music menu item
- [NEW] Now playing information presentation modified.
- [NEW] Italian translation (many thanks to Peppe_sr)
- [NEW] French translation (many thanks to Seb Boucourt)

[V1.0.4]
- Minor tweaks and bug fixes
- [NEW] User option to remove weather data from homescreen

[V1.0.3]
- Minor bug fixes and tweaks
- [CHANGED] TVShow Episode count now reflects watched / unwatched status
- [CHANGED] TVShow view revised to poster view
- [NEW] Basic weather info now available on homescreen
- [CHANGED] Default and skin colour options revised
- [NEW] Higher quality homescreen backgrounds

[V1.0.2]
- Bug fixes
- Extra colour themes added

[V1.0.0]
- Initial release
- [UPDATED] MyMusicPlaylistEditor.xml
- [REMOVED] Unused images
- Minor fixes and bug squashing (thanks Ronie!)
