@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
     <defaultcontrol always="true">8000</defaultcontrol>
-    <onunload>Skin.Reset(showcast)</onunload>
-    <onunload condition="skin.string(showcast,true)">action(info)</onunload>
     <animation type="windowClose">
         <effect type="fade" start="100" end="0" time="400" delay="200"/>
     </animation>
@@ -73,9 +71,9 @@
                 <aspectratio>stretch</aspectratio>
             </control>
             <control type="image">
-                <posx>1-col</posx>
-                <posy>row-22-begin</posy>
-                <width>6-col</width>
+                <posx>col-1-begin</posx>
+                <posy>row-23-begin</posy>
+                <width>5-col</width>
                 <height>4-col</height>
                 <texture>$INFO[ListItem.Art(clearlogo)]</texture>
                 <aspectratio align="left">keep</aspectratio>
@@ -89,9 +87,6 @@
             <animation type="Windowopen">
                 <effect type="fade" start="0" end="100" time="300" delay="300"/>
                 <effect type="slide" start="800" end="0" tween="cubic" easing="out" time="400" delay="300"/>
-            </animation>
-            <animation type="conditional" condition="skin.string(showcast,true)">
-                <effect type="slide" start="0" end="0,-1080" tween="cubic" easing="out" time="400" delay="0"/>
             </animation>
             <animation type="windowClose">
                 <effect type="fade" start="100" end="0" time="350"/>
@@ -306,8 +301,7 @@
                         <label>31074</label>
                         <label2></label2>
                         <thumb>-</thumb>
-                        <onclick>Skin.SetString(showcast,true)</onclick>
-                        <onclick>control.setfocus(50)</onclick>
+                        <onclick>control.setfocus(62)</onclick>
                     </item>
                     <item>
                         <label>20410</label>
@@ -326,14 +320,6 @@
                         <label2></label2>
                         <thumb>-</thumb>
                         <onclick>SendClick(2003,10)</onclick>
-                    </item>
-                    <item>
-                        <description>Artwork Downloader (overrides get artwork if available)</description>
-                        <label2></label2>
-                        <onclick condition="Container.Content(movies)">XBMC.RunScript(script.artwork.downloader, mode=gui, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
-                        <onclick condition="Container.Content(tvshows)">RunScript(script.artwork.downloader,mode=gui, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
-                        <label>$INFO[System.AddonTitle(script.artwork.downloader)]</label>
-                        <visible>false</visible>
                     </item>
                     <item>
                         <label>31169</label>
@@ -526,130 +512,6 @@
                         </item>
                     </content>
                 </control>
-            </control>
-        </control>
-        <!--cast and crew toggle-->
-        <control type="group">
-            <visible>skin.string(showcast,true)</visible>
-            <posx>1200</posx>
-            <posy>0</posy>
-            <animation type="conditional" condition="skin.string(showcast,true)">
-                <effect type="slide" start="800" end="0" tween="cubic" easing="out" time="400" delay="100"/>
-            </animation>
-            <!--overlay-->
-            <control type="image">
-                <posx>0</posx>
-                <posy>0</posy>
-                <width>10-col</width>
-                <height>fullscreenHeight</height>
-                <texture>colors/black.png</texture>
-                <colordiffuse>cc111111</colordiffuse>
-                <aspectratio>stretch</aspectratio>
-            </control>
-            <control type="image">
-                <posx>-6</posx>
-                <posy>0</posy>
-                <width>6</width>
-                <height>fullscreenHeight</height>
-                <texture>colors/white.png</texture>
-                <colordiffuse>highlight</colordiffuse>
-                <aspectratio>stretch</aspectratio>
-            </control>
-            <!--content-->
-            <control type="group">
-                <posx>24</posx>
-                <posy>row-1-begin</posy>
-                <control type="label">
-                    <posx>0</posx>
-                    <posy>-12</posy>
-                    <width>660</width>
-                    <align>left</align>
-                    <height>3-row</height>
-                    <aligny>center</aligny>
-                    <font>largeLight</font>
-                    <textcolor>textActive</textcolor>
-                    <label>$INFO[listitem.title]</label>
-                    <wrapmultiline>true</wrapmultiline>
-                </control>
-            </control>
-            <control type="list" id="50">
-                <posx>0</posx>
-                <posy>204</posy>
-                <width>10-col</width>
-                <height>25-row</height>
-                <itemlayout width="10-col" height="2-col">
-                    <control type="image">
-                        <posx>0</posx>
-                        <posy>0</posy>
-                        <width>2-col-textbox</width>
-                        <height>2-col-textbox</height>
-                        <aspectratio scalediffuse="false">scale</aspectratio>
-                        <texture border="0" fallback="colors/offblack.png">$INFO[listitem.thumb]</texture>
-                        <bordersize>0</bordersize>
-                        <colordiffuse>ffFFFFFF</colordiffuse>
-                    </control>
-                    <control type="label">
-                        <posx>2-col-indent</posx>
-                        <posy>0</posy>
-                        <width>8-col-gutter</width>
-                        <height>2-row</height>
-                        <font>itemTitle</font>
-                        <textcolor>textActive</textcolor>
-                        <label>$INFO[ListItem.label]</label>
-                    </control>
-                    <control type="label">
-                        <posx>2-col-indent</posx>
-                        <posy>1-row</posy>
-                        <width>8-col-gutter</width>
-                        <height>2-row</height>
-                        <font>itemSubTitle</font>
-                        <textcolor>textActive</textcolor>
-                        <label>$INFO[ListItem.label2]</label>
-                    </control>
-                </itemlayout>
-                <focusedlayout width="10-col" height="2-col">
-                    <control type="image">
-                        <posx>0</posx>
-                        <posy>0</posy>
-                        <width>2-col-textbox</width>
-                        <height>2-col-textbox</height>
-                        <aspectratio scalediffuse="false">scale</aspectratio>
-                        <texture border="0" fallback="colors/offblack.png">$INFO[listitem.thumb]</texture>
-                        <bordersize>0</bordersize>
-                        <colordiffuse>ffFFFFFF</colordiffuse>
-                        <animation type="focus" loop="false" reversible="false">
-                            <effect type="rotatey" start="0" end="-15" center="70" tween="back" easing="out" time="300"/>
-                            <effect type="rotatey" start="0" end="15" center="70" tween="back" easing="out" delay="300" time="300"/>
-                        </animation>
-                    </control>
-                    <control type="image">
-                        <posx>2-col</posx>
-                        <posy>0</posy>
-                        <width>8-col</width>
-                        <height>2-col-textbox</height>
-                        <aspectratio>stretch</aspectratio>
-                        <texture>colors/white.png</texture>
-                        <colordiffuse>ffFFFFFF</colordiffuse>
-                    </control>
-                    <control type="label">
-                        <posx>2-col-indent</posx>
-                        <posy>0</posy>
-                        <width>8-col-gutter</width>
-                        <height>2-row</height>
-                        <font>itemTitle</font>
-                        <textcolor>black</textcolor>
-                        <label>$INFO[ListItem.label]</label>
-                    </control>
-                    <control type="label">
-                        <posx>2-col-indent</posx>
-                        <posy>1-row</posy>
-                        <width>8-col-gutter</width>
-                        <height>2-row</height>
-                        <font>itemSubTitle</font>
-                        <textcolor>black</textcolor>
-                        <label>$INFO[ListItem.label2]</label>
-                    </control>
-                </focusedlayout>
             </control>
         </control>
         <!--buttons-->
